// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser.block.list > 'ordered' > 'empty line between items' 1`] = `
[
  {
    "class": "block.list.ordered",
    "content": [
      {
        "class": "block.list.item",
        "content": [],
      },
    ],
  },
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "First
",
      },
    ],
  },
  {
    "class": "block.list.ordered",
    "content": [
      {
        "class": "block.list.item",
        "content": [],
      },
    ],
  },
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "Second",
      },
    ],
  },
]
`;

exports[`parser.block.list > 'ordered' > 'followed by paragraph' 1`] = `
[
  {
    "class": "block.list.ordered",
    "content": [
      {
        "class": "block.list.item",
        "content": [],
      },
    ],
  },
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "Item
",
      },
      {
        "class": "inline.text",
        "value": "A paragraph",
      },
    ],
  },
]
`;

exports[`parser.block.list > 'ordered' > 'mixed item density' 1`] = `
[
  {
    "class": "block.list.ordered",
    "content": [
      {
        "class": "block.list.item",
        "content": [],
      },
    ],
  },
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "First
",
      },
    ],
  },
  {
    "class": "block.list.ordered",
    "content": [
      {
        "class": "block.list.item",
        "content": [],
      },
    ],
  },
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "Second
",
      },
    ],
  },
  {
    "class": "block.list.ordered",
    "content": [
      {
        "class": "block.list.item",
        "content": [],
      },
    ],
  },
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "Nested",
      },
    ],
  },
]
`;

exports[`parser.block.list > 'ordered' > 'multiple items' 1`] = `
[
  {
    "class": "block.list.ordered",
    "content": [
      {
        "class": "block.list.item",
        "content": [],
      },
    ],
  },
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "First
",
      },
    ],
  },
  {
    "class": "block.list.ordered",
    "content": [
      {
        "class": "block.list.item",
        "content": [],
      },
    ],
  },
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "Second
",
      },
    ],
  },
  {
    "class": "block.list.ordered",
    "content": [
      {
        "class": "block.list.item",
        "content": [],
      },
    ],
  },
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "Third",
      },
    ],
  },
]
`;

exports[`parser.block.list > 'ordered' > 'nested list' 1`] = `
[
  {
    "class": "block.list.ordered",
    "content": [
      {
        "class": "block.list.item",
        "content": [],
      },
    ],
  },
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "Outer
",
      },
    ],
  },
  {
    "class": "block.list.ordered",
    "content": [
      {
        "class": "block.list.item",
        "content": [],
      },
    ],
  },
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "Inner",
      },
    ],
  },
]
`;

exports[`parser.block.list > 'ordered' > 'single item' 1`] = `
[
  {
    "class": "block.list.ordered",
    "content": [
      {
        "class": "block.list.item",
        "content": [],
      },
    ],
  },
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "First item",
      },
    ],
  },
]
`;

exports[`parser.block.list > 'unordered' > 'empty line between items' 1`] = `
[
  {
    "class": "block.list.unordered",
    "content": [
      {
        "class": "block.list.item",
        "content": [],
      },
    ],
  },
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "First
",
      },
    ],
  },
  {
    "class": "block.list.unordered",
    "content": [
      {
        "class": "block.list.item",
        "content": [],
      },
    ],
  },
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "Second",
      },
    ],
  },
]
`;

exports[`parser.block.list > 'unordered' > 'followed by paragraph' 1`] = `
[
  {
    "class": "block.list.unordered",
    "content": [
      {
        "class": "block.list.item",
        "content": [],
      },
    ],
  },
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "Item
",
      },
      {
        "class": "inline.text",
        "value": "A paragraph",
      },
    ],
  },
]
`;

exports[`parser.block.list > 'unordered' > 'mixed item density' 1`] = `
[
  {
    "class": "block.list.unordered",
    "content": [
      {
        "class": "block.list.item",
        "content": [],
      },
    ],
  },
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "First
",
      },
    ],
  },
  {
    "class": "block.list.unordered",
    "content": [
      {
        "class": "block.list.item",
        "content": [],
      },
    ],
  },
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "Second
",
      },
    ],
  },
  {
    "class": "block.list.unordered",
    "content": [
      {
        "class": "block.list.item",
        "content": [],
      },
    ],
  },
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "Nested",
      },
    ],
  },
]
`;

exports[`parser.block.list > 'unordered' > 'multiple items' 1`] = `
[
  {
    "class": "block.list.unordered",
    "content": [
      {
        "class": "block.list.item",
        "content": [],
      },
    ],
  },
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "First
",
      },
    ],
  },
  {
    "class": "block.list.unordered",
    "content": [
      {
        "class": "block.list.item",
        "content": [],
      },
    ],
  },
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "Second
",
      },
    ],
  },
  {
    "class": "block.list.unordered",
    "content": [
      {
        "class": "block.list.item",
        "content": [],
      },
    ],
  },
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "Third",
      },
    ],
  },
]
`;

exports[`parser.block.list > 'unordered' > 'nested list' 1`] = `
[
  {
    "class": "block.list.unordered",
    "content": [
      {
        "class": "block.list.item",
        "content": [],
      },
    ],
  },
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "Outer
",
      },
    ],
  },
  {
    "class": "block.list.unordered",
    "content": [
      {
        "class": "block.list.item",
        "content": [],
      },
    ],
  },
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "Inner",
      },
    ],
  },
]
`;

exports[`parser.block.list > 'unordered' > 'single item' 1`] = `
[
  {
    "class": "block.list.unordered",
    "content": [
      {
        "class": "block.list.item",
        "content": [],
      },
    ],
  },
  {
    "class": "block.paragraph",
    "content": [
      {
        "class": "inline.text",
        "value": "First item",
      },
    ],
  },
]
`;
